--- a/config/nav2.yaml
+++ b/config/nav2.yaml
@@ -71,7 +71,7 @@ controller_server:
     use_sim_time: True
     controller_frequency: 20.0
     min_x_velocity_threshold: 0.001
-    min_y_velocity_threshold: 0.5
+    min_y_velocity_threshold: 0.001
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
     progress_checker_plugin: "progress_checker"
@@ -94,48 +94,47 @@ controller_server:
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.25
       yaw_goal_tolerance: 0.25
-    # DWB parameters
     FollowPath:
-      plugin: "dwb_core::DWBLocalPlanner"
-      debug_trajectory_details: True
-      min_vel_x: 0.0
-      min_vel_y: 0.0
-      max_vel_x: 0.50
-      max_vel_y: 0.50
-      max_vel_theta: 1.0
-      min_speed_xy: 0.0
-      max_speed_xy: 0.50
-      min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-      acc_lim_x: 2.5
-      acc_lim_y: 2.5
-      acc_lim_theta: 3.2
-      decel_lim_x: -2.5
-      decel_lim_y: -2.5
-      decel_lim_theta: -3.2
-      vx_samples: 20
-      vy_samples: 20
-      vtheta_samples: 20
-      sim_time: 1.7
-      linear_granularity: 0.05
+      acc_lim_theta: 4.7
+      acc_lim_x: 1.0
+      acc_lim_y: 1.0
       angular_granularity: 0.025
-      transform_tolerance: 0.2
-      xy_goal_tolerance: 0.25
-      trans_stopped_velocity: 0.25
-      short_circuit_trajectory_evaluation: True
-      stateful: True
-      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
       BaseObstacle.scale: 0.02
-      PathAlign.scale: 32.0
-      PathAlign.forward_point_distance: 0.1
-      GoalAlign.scale: 24.0
+      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+      debug_trajectory_details: True
+      decel_lim_theta: -4.7
+      decel_lim_x: -1.0
+      decel_lim_y: -1.0
       GoalAlign.forward_point_distance: 0.1
-      PathDist.scale: 32.0
+      GoalAlign.scale: 24.0
       GoalDist.scale: 24.0
+      linear_granularity: 0.05
+      max_speed_xy: 1.00
+      max_vel_theta: 4.7
+      max_vel_x: 1.00
+      max_vel_y: 1.00
+      min_speed_theta: 0.0
+      min_speed_xy: 0.0
+      min_vel_x: 0.0
+      min_vel_y: 0.0
+      PathAlign.forward_point_distance: 0.1
+      PathAlign.scale: 32.0
+      PathDist.scale: 32.0
+      plugin: "dwb_core::DWBLocalPlanner"
+      RotateToGoal.lookahead_time: -1.0
       RotateToGoal.scale: 32.0
       RotateToGoal.slowing_factor: 5.0
-      RotateToGoal.lookahead_time: -1.0
+      short_circuit_trajectory_evaluation: True
+      sim_time: 1.7
+      stateful: True
+      trans_stopped_velocity: 0.25
+      transform_tolerance: 0.2
+      vtheta_samples: 20
+      vx_samples: 20
+      vy_samples: 20
+      xy_goal_tolerance: 0.25
 
 local_costmap:
   local_costmap:
@@ -143,7 +142,7 @@ local_costmap:
       update_frequency: 5.0
       publish_frequency: 2.0
       global_frame: odom
-      robot_base_frame: base_link
+      robot_base_frame: base_footprint
       use_sim_time: True
       rolling_window: true
       width: 3
